fixed whitespace

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -291,7 +291,7 @@ section.jordys-specialties {
     color: white;
     background-color: black;
     width: 100%;
-    padding: 0 30px 0 30px;
+    /* padding: 0 30px 0 30px; */
 }
 
 .lower-section {
