--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,16 +1,9 @@
-/* body {
-    font-family: 'Fira Sans', sans-serif !important;
-} */
-
 .about-page {
-    /* margin: 0 8% 0 8%; */
     padding: 0 20px 0 20px;
-    /* margin-top: 50px; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background-color: #93A8AC; */
     color: #333;
 }
 
@@ -26,13 +19,8 @@
 
 .about-page-upper {
     height: 100%;
-    width: 100%;
-    /* padding-right: 10%; */
-    /* padding-left: 10%; */
     padding: 20px 5% 20px 5%;
-    /* border-top: 4px solid #53687e; */
     border-radius: 1px;
-    /* background-color:#b5d5db;  */
     background-color: white;
     color: black;
     display: flex;
@@ -46,7 +34,6 @@
 
 .about-page-upper h2 {
     border-left: 5px solid #424B54;
-    /* align-self: center; */
     font-size: 30px;
     padding-left: 10px;
 }
@@ -63,7 +50,6 @@
 div.p-1 {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     align-items: space-between;
     justify-content: space-around;
     min-height: 50vh;
@@ -77,7 +63,6 @@ div.p-2 {
     min-height: 30vh;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
     padding-top: 10px;
     max-width: 900px;
@@ -87,43 +72,11 @@ div.p-3 {
     min-height: 30vh;
 }
 
-
-/* 
-.hr-container{
-    position: relative;
-}
-
-.hr-container:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    
-    bottom: 0;
-    margin-top: 4em;
-    background-image: linear-gradient(45deg, black, #20494d);
-    transform: skewY(-4deg);
-    opacity: .9;
-    height: 11em;
-     border: 10px solid red; 
-    box-shadow: 5px 9px 0px 0px black;
-    background: linear-gradient(45deg, #002e31, #075258);
-     padding-block: 0; 
-    -webkit-backface-visibility: hidden;
-} */
-
 @media (min-width: 658px) {
-    .p-2 {
-        /* margin: 0 8% 0 8%; */
-    }
+    
 }
   
 @media screen and (max-width: 680px) {
-    .about-page {
-        /* margin-top: 100px !important; */
-    }
-    
     .about-page-upper {
         font-size: 18px !important;
     }
