--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -68,7 +68,7 @@ form {
     font-size: 16px;
     color: black;
     background-color: whitesmoke;
-    padding: 30px 30px 15px 30px;
+    /* padding: 30px 30px 15px 30px; */
     transition-duration: .5s ease-in-out;
 }
 
